assets/src/scss/layout/_page-header.scss
.breadcrumbs {
  padding-top: 40px;

  li {
    display: inline-block;
    list-style-type: none;
    position: relative;

    &:not(:first-child) {
      margin-left: 1.5em;

      a:before {
        content: ">";
        position: absolute;
        left: -1em;
      }
    }
  }
}

.header-wrapper {
  height: 0;
}

.page-header {
  _-- {
    color: $grey-80;
    background: inherit;
    padding-top: 90px;
    padding-bottom: 0;
    margin-bottom: $space-md;

    @include medium-and-up {
      padding-top: 104px;
    }

    @include large-and-up {
      padding-top: 144px;
      margin-bottom: $space-lg;
    }

    @include x-large-and-up {
      padding-top: 144px;
    }
  }
  position: relative;

  &.page-header-hidden {
    padding: 0 !important;
    margin: 0;
  }

  .container > *:not(.row) {
    @include medium-and-up {
      max-width: 80%;
    }

    @include x-large-and-up {
      max-width: 60%;
    }
  }

  h3 _-- {
    margin-bottom: 20px;

    @include medium-and-up {
      line-height: 1.2;
    }

    @include large-and-up {
      width: 60%;
    }

    @include x-large-and-up {
      margin-bottom: 30px;
      line-height: 1.1;
    }
  }
}

.page-header-background {
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  left: 0;

  _-- {
    bottom: auto;
  }

  &:after {
    content: "";
    display: block;
    position: absolute;
    z-index: 0;
    left: 0;
    right: 0;

    _-- {
      height: 75%;
      bottom: -.5%;
      background: linear-gradient(360deg, $white 0%, transparent 100%);
    }
  }

  img {
    width: 100%;
    height: 100%;
  }
}

.page-header-image {
  max-width: 100%;
  display: block;
  margin: auto;
}

.page-header-title _-- {
  font-family: $roboto;
  font-weight: bold;
  text-transform: none;
  max-width: 80%;
  margin-bottom: 10px;

  @include medium-and-up {
    margin-bottom: 12px;
  }

  @include large-and-up {
    margin-bottom: 20px;
  }

  @include x-large-and-up {
    line-height: 1.1;
    margin-bottom: 20px;
  }
}

.page-header-subtitle {
  line-height: 1.3;
  max-width: 80%;
  margin: 0;

  @include medium-and-up {
    margin: 0 0 22px 0;
  }
}

.page-header-btn {
  display: inline-block;
  width: 100%;
  margin-top: 40px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  @include medium-and-up {
    margin-top: 24px;
    width: auto;
    min-width: 300px;
  }

  @include large-and-up {
    margin-top: 24px;
  }

  @include x-large-and-up {
    margin-top: 36px;
  }
}

.page-header-content {
  display: none;
  margin-top: 0;

  @include medium-and-up {
    display: block;
    margin-bottom: 0;
  }
}

